@@ -1,7 +1,7 @@
 package com.higo.learning.resources.utils;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -11,15 +11,11 @@ public class URL {
     public static List<Integer> decodeIntList(String s) {
         return Arrays.asList(s.split(","))
                 .stream()
-                .map(x -> Integer.parseInt(x))
+                .map(Integer::parseInt)
                 .collect(Collectors.toList());
     }
 
     public static String decodeParam(String s) {
-        try {
-            return URLDecoder.decode(s, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            return "";
-        }
+        return URLDecoder.decode(s, StandardCharsets.UTF_8);
     }
 }
